--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p class="apresentacao__conteudo__texto">Daru Hashida é o <strong class="texto-destacado">hacker genial de Steins;Gate</strong>, mestre em tecnologia e programação. Com seu jeito descontraído e leal, ele apoia seus amigos nas missões mais difíceis, ajudando a desvendar mistérios e mudar o destino.</p>
             <div class="apresentacao__conteudo__links">
                 <a class="apresentacao__conteudo__links__link" href="">Github</a>
-                <a class="apresentacao__conteudo__links__link" href="">Linkedin</a>
+                <a class="apresentacao__conteudo__links__link" href="">Linkedi</a>
             </div>
         </section>
         <img class="apresentacao__foto" src="./super-hacka.jpg" alt="Foto do DaruHashida">
