--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Daru Hashida</title>
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="">Home</a>
+            <a class="cabecalho__menu__link" href="">Super Hacka</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Daru Hashida — <strong class="texto-destacado">O Mestre Supremo dos Hackers</strong> e Coração da Resistência em Steins;Gate</h1>
@@ -19,6 +24,8 @@
         </section>
         <img class="apresentacao__foto" src="./super-hacka.jpg" alt="Foto do DaruHashida">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p class="rodape__texto">Desenvolvido por Adriano Augusto</p>
+    </footer>
 </body>
 </html>
