Adicionando o about, modificando o index, alterando a pasta dos arquivos e renomeando

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Daru Hashida</title>
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="">Home</a>
-            <a class="cabecalho__menu__link" href="">Super Hacka</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Super Hacka</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -18,11 +18,11 @@
             <h1 class="apresentacao__conteudo__titulo">Daru Hashida — <strong class="texto-destacado">O Mestre Supremo dos Hackers</strong> e Coração da Resistência em Steins;Gate</h1>
             <p class="apresentacao__conteudo__texto">Daru Hashida é o <strong class="texto-destacado">hacker genial de Steins;Gate</strong>, mestre em tecnologia e programação. Com seu jeito descontraído e leal, ele apoia seus amigos nas missões mais difíceis, ajudando a desvendar mistérios e mudar o destino.</p>
             <div class="apresentacao__conteudo__links">
-                <a class="apresentacao__conteudo__links__link" href="">Github</a>
-                <a class="apresentacao__conteudo__links__link" href="">Linkedin</a>
+                <a class="apresentacao__conteudo__links__link" target="_blank" href="https://github.com/AdrianoLaguiosta">Github</a>
+                <a class="apresentacao__conteudo__links__link" target="_blank" href="https://www.linkedin.com/in/adriano-augusto-de-oliveira-43856619a/">Linkedin</a>
             </div>
         </section>
-        <img class="apresentacao__foto" src="./super-hacka.jpg" alt="Foto do DaruHashida">
+        <img class="apresentacao__foto" src="./assets/super-hacka.jpg" alt="Foto do DaruHashida">
     </main>
     <footer class="rodape">
         <p class="rodape__texto">Desenvolvido por Adriano Augusto</p>
